Chrome OS: improvements to frame avatar icon.

1. Better (more vertically centered) position for hosted app windows.
2. Correct sizing (29x29 instead of crunching to 24x24) for browser and
   hosted app windows. Packaged apps were already using 29x29.
3. Get rid of outline. GetAvatarImageFor{User,Context} already adds a
   white border.

Bug: 901127
Change-Id: I5b0fcb1bcd3266c988e1a62c84b4f8455b53df35
Reviewed-on: https://chromium-review.googlesource.com/c/1313746
Commit-Queue: Evan Stade <estade@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605006}
Former-commit-id: e040344b0a4035689ae37c3c6bade1390593f2c7